@@ -1,3 +1,13 @@
+2009-11-19  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Darin Adler.
+
+        Remove HAVE(STRING_H) guard from JavaScriptCore
+        https://bugs.webkit.org/show_bug.cgi?id=31668
+
+        * config.h:
+        * runtime/UString.cpp:
+
 2009-11-19  Dumitru Daniliuc  <dumi@chromium.org>
 
         Reviewed by Dmitry Titov.
